# Arogyamitra

./: .gitignore  .replit  CNAME  LOCAL_SETUP_GUIDE.md  ai_helper.py  app.py  auth_manager.py  data_manager.py  pyproject.toml  replit.md  requirements.txt  translations.py
.streamlit/: config.toml
attached_assets/: Pasted-You-are-working-on-an-existing-Streamlit-project-named-_1768588344566.txt  Pasted-You-are-working-on-an-existing-Streamlit-project-named-_1768588381730.txt
health_data/: analytics.json  appointments.json  health_profiles.json  health_records.json  medications.json  prescriptions.json  reminders.json  saved_hospitals.json  support_tickets.json  users.json
