[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "audio-recorder-streamlit>=0.0.10",
    "gtts>=2.5.4",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "pydub>=0.25.1",
    "python-dateutil>=2.9.0.post0",
    "speechrecognition>=3.14.3",
    "streamlit>=1.51.0",
]
